objects/Competitor_Product_Qualification__c.object
<CustomObject>
    <description>R4 Competitor Product Qualification</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>R4Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Competitor_PQ</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>R4 Comments</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Qualification_Status__c</fullName>
        <formula>IF ( OR (ISPICKVAL(Product_Qualification__r.Initiative_Status__c, &apos;Closed Qualified&apos;), ISPICKVAL(Product_Qualification__r.Initiative_Status__c, &apos;Closed Not Qualified&apos;)), &apos;Closed&apos;, TEXT(Product_Qualification__r.Initiative_Status__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Qualification Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Qualification__c</fullName>
        <description>R4 Product Qualification</description>
        <label>Product Qualification</label>
        <referenceTo>Product_Qualification__c</referenceTo>
        <relationshipName>Competitor_PQ</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unique_Check__c</fullName>
        <description>R4 field used in workflow field update Unique Check competitor.
Check the Account Product Qualification.</description>
        <label>Unique Account Check</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Competitor</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Comp PQ - {0000}</displayFormat>
        <label>Competitor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Competitor_Account_Name_Check</fullName>
        <active>true</active>
        <description>R4 - Not allow the Same Customer added in the Product Qualification again as a competitor . Same customer cannot be a competitor.</description>
        <errorConditionFormula>CONTAINS(Account__r.Name,  Product_Qualification__r.Account__r.Name)</errorConditionFormula>
        <errorMessage>You cannot add the Same Customer as Competitor.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Competitor_No_Bulk_Accounts</fullName>
        <active>true</active>
        <description>Account cannot be Bulk Business Account.</description>
        <errorConditionFormula>AND(
    NOT($User.AccountMerge_Override__c),
    NOT($Setup.Validation_Override__c.Exclude__c),
	CONTAINS(LOWER(Account__r.Name),&apos;bulk business&apos;)
)</errorConditionFormula>
        <errorMessage>Account cannot be Bulk Business Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Record_Lock_Check</fullName>
        <active>true</active>
        <description>R4 Record Lock Check based on Initiative Status value</description>
        <errorConditionFormula>AND($Profile.Name &lt;&gt; &quot;System Administrator&quot;,IF(OR(ISPICKVAL(Product_Qualification__r.Initiative_Status__c, &quot;Closed Qualified&quot;),ISPICKVAL(Product_Qualification__r.Initiative_Status__c,&quot;Closed Not Qualified&quot;)) ,true, false))</errorConditionFormula>
        <errorMessage>You cannot save the changes as Product Qualification Status is Closed.</errorMessage>
    </validationRules>
</CustomObject>